# docs/api/main-backend-openapi.json
@@ -289,6 +289,104 @@
         }
       }
     },
+    "/profiles/{profile_id}/chat-rooms": {
+      "post": {
+        "tags": [
+          "chat"
+        ],
+        "summary": "Create Chat Room",
+        "operationId": "create_chat_room_profiles__profile_id__chat_rooms_post",
+        "parameters": [
+          {
+            "name": "profile_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Profile Id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChatRoomCreateRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": true,
+                  "title": "Response Create Chat Room Profiles  Profile Id  Chat Rooms Post"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/chat-rooms/{room_id}/messages": {
+      "get": {
+        "tags": [
+          "chat"
+        ],
+        "summary": "Get Chat Room Messages",
+        "operationId": "get_chat_room_messages_chat_rooms__room_id__messages_get",
+        "parameters": [
+          {
+            "name": "room_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Room Id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": true,
+                  "title": "Response Get Chat Room Messages Chat Rooms  Room Id  Messages Get"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/sessions": {
       "post": {
         "tags": [
@@ -463,6 +561,21 @@
   },
   "components": {
     "schemas": {
+      "ChatRoomCreateRequest": {
+        "properties": {
+          "other_profile_id": {
+            "type": "string",
+            "maxLength": 64,
+            "minLength": 1,
+            "title": "Other Profile Id"
+          }
+        },
+        "type": "object",
+        "required": [
+          "other_profile_id"
+        ],
+        "title": "ChatRoomCreateRequest"
+      },
       "HTTPValidationError": {
         "properties": {
           "detail": {
